[gd_scene load_steps=2 format=3 uid="uid://bleg0fgcjcwm4"]

[ext_resource type="Script" uid="uid://1j7jja43aj6j" path="res://scenes/ui/census_panel.gd" id="1_l2jpt"]

[node name="CensusPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2jpt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="CensusScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CensusText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CensusScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
